# IntelliDoc-AI

./: .gitignore  .replit  COMMIT_EDITMSG  ai_service.py  app.py  auth.py  config  database.py  gemini_service.py  index  local.db  models.py  navbar.py  pdf_processor.py  performance_optimizer.py  pyproject.toml  replit.md  requirements.txt  setup_ollama.py  utils.py
.streamlit/: config.toml
logs/: HEAD
logs/refs/heads/: replit-agent
refs/heads/: main  replit-agent
