[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.26.0",
    "openai>=1.97.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.3",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
]
